; ModuleID = '/home/carl/AnghaBench/twemproxy/src/extr_nc_util.c__nc_realloc.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/extr_nc_util.c__nc_realloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [28 x i8] c"realloc(%zu) failed @ %s:%d\00", align 1
@LOG_VVERB = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [27 x i8] c"realloc(%zu) at %p @ %s:%d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @_nc_realloc(i8* %0, i64 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load i64, i64* %6, align 8
  %11 = icmp ne i64 %10, 0
  %12 = zext i1 %11 to i32
  %13 = call i32 @ASSERT(i32 %12)
  %14 = load i8*, i8** %5, align 8
  %15 = load i64, i64* %6, align 8
  %16 = call i8* @realloc(i8* %14, i64 %15)
  store i8* %16, i8** %9, align 8
  %17 = load i8*, i8** %9, align 8
  %18 = icmp eq i8* %17, null
  br i1 %18, label %19, label %24

19:                                               ; preds = %4
  %20 = load i64, i64* %6, align 8
  %21 = load i8*, i8** %7, align 8
  %22 = load i32, i32* %8, align 4
  %23 = call i32 @log_error(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i64 %20, i8* %21, i32 %22)
  br label %31

24:                                               ; preds = %4
  %25 = load i32, i32* @LOG_VVERB, align 4
  %26 = load i64, i64* %6, align 8
  %27 = load i8*, i8** %9, align 8
  %28 = load i8*, i8** %7, align 8
  %29 = load i32, i32* %8, align 4
  %30 = call i32 @log_debug(i32 %25, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0), i64 %26, i8* %27, i8* %28, i32 %29)
  br label %31

31:                                               ; preds = %24, %19
  %32 = load i8*, i8** %9, align 8
  ret i8* %32
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i8* @realloc(i8*, i64) #1

declare dso_local i32 @log_error(i8*, i64, i8*, i32) #1

declare dso_local i32 @log_debug(i32, i8*, i64, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
